--- a/style.scss
+++ b/style.scss
@@ -982,10 +982,10 @@ h1.single-title,
     margin-left: auto;
     margin-right: auto;
     border-bottom: 0;
-    color: #FFF;
+    color: #1cabb1;
     display: block;
     padding: 10px 20px 10px 20px;
-    background-color: #fb5c02;
+    background-color: #fff;
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     border-radius: 6px;
@@ -2160,7 +2160,7 @@ a.all-drivers-img:hover div {
     }
 
     .large-img h3 {
-        font-size: 23vw;
+        font-size: 12vw;
         line-height: 19.5vw;
     }
 
